argo/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: argocd
  namespace: default
spec:
  gateways:
    - default/default-gateway
  hosts:
    - "argocd.localhost"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port: 
              number: 80
